# cooperative-pulling-task

./: .gitignore  .gitmodules  CMakeLists.txt  MarmoAAP_hardware_setup_guide.md  README.md  env.yml
lib/win/Debug/: serial.lib
lib/win/RelWithDebInfo/: serial.lib
notes/: lever_direction_control.txt  syringe_pump_control.txt
python/: lever.py  test.py
sketches/cooperative_pulling/: cooperative_pulling.ino
sketches/cooperative_pulling_lever1/: cooperative_pulling_lever1.ino
sketches/cooperative_pulling_lever2/: cooperative_pulling_lever2.ino
sketches/test/: test.ino
src/common/: app.cpp  app.hpp  audio.cpp  audio.hpp  common.hpp  glfw.cpp  glfw.hpp  gui.cpp  gui.hpp  handshake.hpp  identifier.hpp  imgui.cpp  imgui.hpp  juice_pump.cpp  juice_pump.hpp  juice_pump_gui.cpp  juice_pump_gui.hpp  led.cpp  led.hpp  lever_gui.cpp  lever_pull.cpp  lever_pull.hpp  lever_system.cpp  lever_system.hpp  ni.cpp  ni.hpp  ni_gui.cpp  ni_gui.hpp  ni_old.cpp  ni_old.hpp  om.hpp  random.cpp  random.hpp  render.cpp  render.hpp  ringbuffer.hpp  sample_queue.hpp  serial.cpp  serial.hpp  serial_lever.cpp  (+4 more)
src/sandbox/: CMakeLists.txt
src/sandbox/test_context/: CMakeLists.txt  main.cpp
src/sandbox/test_gui/: CMakeLists.txt  main.cpp
src/sandbox/test_gui_context/: CMakeLists.txt  main.cpp  main_backup.cpp  main_new_structure_under_construction.cpp  training.cpp  training.hpp
src/sandbox/test_serial/: CMakeLists.txt  main.cpp
